# Build-Minimal-JUCE-VST3

./: CMakeLists.txt
.github/workflows/: main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
